# COMP

./: README.md
practica01/: CMakeLists.txt  ErrorLog.c  ErrorLog.h  InputSystem.c  InputSystem.h  LexicalAnalyzer.c  LexicalAnalyzer.h  README.md  compile.sh  goDefinitions.c  goDefinitions.h  main.c
practica01/compiled/: CMakeCache.txt  Makefile  cmake_install.cmake  compiler
practica01/resources/: concurrentSum.go
practica01/test/: IntegrationTest.h
practica02/: ErrorLog.c  ErrorLog.h  IntegrationTest.h  LexicalAnalyzer.c  LexicalAnalyzer.h  README.md  buildAndRun.sh  goDefinitions.c  goDefinitions.h  lexer.l  main.c
practica02/resources/: PerfectHash.c  PerfectHash.h
practica03/: .ErrorCheck.c.swp  .ejemplo.txt.swp  CMakeLists.txt  HashMap.c  HashMap.h  Logger.c  Logger.h  SymbolTable.c  SymbolTable.h  compila.sh  ejemplo.txt  exec  interprete  lex.yy.c  lexerTested.l  syntax.tab.c  syntax.tab.h  syntax.y
practica04/: CMakeLists.txt  Informe.md  a.out  m.c  main.c  main1.s  main2.s  mediciones.py
